objects/ffct__BundleJob__c.object
<CustomObject>
    <customHelpPage>ffct__bundlejobonlinehelp</customHelpPage>
    <description>Information about push and provision jobs including the connection used.</description>
    <fields>
        <fullName>ffct__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Push</fullName>
                    <default>true</default>
                    <label>Push</label>
                </value>
                <value>
                    <fullName>Provision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Connection</label>
        <referenceTo>ffct__Connection__c</referenceTo>
        <relationshipName>BundleJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__SignupEmail__c</fullName>
        <label>Signup Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ffct__SignupUsername__c</fullName>
        <label>Signup Username</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ffct__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SIGNUPREQUEST_RECORD_CREATED</fullName>
                </value>
                <value>
                    <fullName>ACCESS_TOKEN_IS_FETCHED</fullName>
                </value>
                <value>
                    <fullName>CONSULTING_TOOLS_INSTALLATION_STARTED</fullName>
                </value>
                <value>
                    <fullName>CONSULTING_TOOLS_INSTALLED</fullName>
                </value>
                <value>
                    <fullName>IMPORT_PROCESS_STARTED</fullName>
                </value>
                <value>
                    <fullName>IMPORT_PROCESS_COMPLETED</fullName>
                </value>
                <value>
                    <fullName>IMPORT_PROCESS_COMPLETED_WITH_ERRORS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__StatusMessage__c</fullName>
        <label>Status Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Bundle Job</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bundle Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>